--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <description>API using Spring Boot 3</description>
     <properties>
         <java.version>17</java.version>
-        <dozer.version>6.4.0</dozer.version>
+        <dozer.version>6.5.2</dozer.version>
     </properties>
     <dependencies>
         <dependency>
@@ -31,6 +31,16 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-mysql</artifactId>
         </dependency>
 
         <dependency>
